Fix heading on small screen sizes

--- a/client/styles/page.less
+++ b/client/styles/page.less
@@ -17,7 +17,11 @@ body {
 }
 
 .page {
-  padding: 106px 10px 10px 10px;
+  padding: 170px 10px 10px 10px;
+
+  @media @header-side-by-side {
+    padding-top: 106px;
+  }
 
   h2, p {
     margin-left:10px;
